srini-padala/yaml/tekton-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    external-dns.alpha.kubernetes.io/hostname: tekton.aks.srinipadala.xyz
    external-dns.alpha.kubernetes.io/target: aks.srinipadala.xyz
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - tekton.aks.srinipadala.xyz
      secretName: tls-tekton-secret
  rules:
  - host: tekton.aks.srinipadala.xyz
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
        path: /(.*)
